--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,21 @@ body {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+button{
+  position: relative;
+}
+
+button[title]:hover::after{
+  content: attr(title);
+  position: absolute;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 12px;
+  padding-right: 12px;
+  background-color: black;
+  color: white;
+  border-radius: 2px;
+  top: 50px;
+  left: 5px;
+}
