make components more visible

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
+html{
+  background-color: whitesmoke;
+}
+
 body {
   margin: 0;
 }
